# FliphackV1

./: BOM.csv  Firmware  LICENSE  README.md  fliphackV1.kicad_pcb  fliphackV1.kicad_pro  fliphackV1.kicad_sch
3D_Models/: Body1_repair0.1.stl  Body_bottom.stl  Body_bottom_repair1.stl  Body_lower.stl  Body_top.stl  Body_top_repair1.stl  Fliphack_V1_0.3.step
3D_models/: FliphackV1_casedown.stl  FliphackV1_caseup.stl  case_body.stl  case_cover.stl  case_lower.stl  case_upper.stl
Firmware/: platformio.ini
Firmware/GUI/: project.info  ui.c  ui_MainMenu.h  ui_MouseJackSniff.c  ui_MouseJackSniff.h  ui_NmeaConsole.c  ui_NmeaConsole.h  ui_NrfAction.h  ui_NrfMenu.c  ui_PcapAction.c  ui_PcapManager.c  ui_PortalSelectScreen.c  ui_PortalSelectScreen.h  ui_PowerSleep.c  ui_PowerSleep.h  ui_RadioConfig.h  ui_RunPayload.h  ui_SDCardBeacon.h  ui_SateliteInfo.h  ui_SavedPayloads.c  ui_SavedRemotes.c  ui_SavedRemotes.h  ui_SavedTags.c  ui_SavedTags.h  ui_SavedTagsRemote.h  ui_ScanAPs.h  ui_SelectTargetBeacon.h  ui_events.h  ui_helpers.h
Firmware/GUI/screens/: ui_BLESniffer.c  ui_BLESniffer.h  ui_BLESpam.c  ui_BLESpam.h  ui_BLESpamAction.c  ui_BLESpamAction.h  ui_BadUsb.c  ui_BadUsb.h  ui_BeaconModes.c  ui_BeaconModes.h  ui_BeaconSniffing.c  ui_BeaconSniffing.h  ui_BeaconSpam.c  ui_BeaconSpam.h  ui_Bluetooth.c  ui_Bluetooth.h  ui_CCSendSavedAction.c  ui_CCSendSavedAction.h  ui_DeauthAttack.c  ui_DeauthAttack.h  ui_DeviceInfo.c  (+80 more)
Firmware/GUI2/: CMakeLists.txt  filelist.txt  ui.h  ui_helpers.c
Firmware/GUI2/components/: ui_comp_hook.c
Firmware/include/: FliphackV1_firmware.code-workspace
Firmware/src/: main.cpp
Gerbers/: fliphackV1-B_Cu.gbr  fliphackV1-B_Mask.gbr  fliphackV1-B_Paste.gbr  fliphackV1-B_Silkscreen.gbr  fliphackV1-Edge_Cuts.gbr  fliphackV1-F_Cu.gbr  fliphackV1-F_Mask.gbr  fliphackV1-F_Paste.gbr  fliphackV1-F_Silkscreen.gbr  fliphackV1-NPTH.drl  fliphackV1-PTH.drl  fliphackV1-job.gbrjob  fliphackV1-top-pos.csv  fliphackV1.csv
Kicad_Source/: fliphackV1.kicad_pcb  fliphackV1.kicad_pro  fliphackV1.kicad_sch
