SET(SOURCES screens/ui_MainMenu.c
    screens/ui_WiFiMenu.c
    screens/ui_ScanAPs.c
    screens/ui_WIFIDetails.c
    screens/ui_SubGhzMenu.c
    screens/ui_RfidMenu.c
    screens/ui_NrfMenu.c
    screens/ui_IRMenu.c
    screens/ui_GPSMenu.c
    screens/ui_Bluetooth.c
    screens/ui_BadUsb.c
    screens/ui_SDCard.c
    screens/ui_SYSTEM.c
    screens/ui_DeviceInfo.c
    screens/ui_ReadSignal.c
    screens/ui_SavedSignals.c
    screens/ui_FREQAnalyzer.c
    screens/ui_RadioConfig.c
    screens/ui_ReadTag.c
    screens/ui_EmulateTag.c
    screens/ui_WriteClone.c
    screens/ui_SavedTags.c
    screens/ui_MouseJackSniff.c
    screens/ui_InjectPayload.c
    screens/ui_SpectrumAnalyzer.c
    screens/ui_SavedPayloads.c
    screens/ui_PowerSleep.c
    screens/ui_Display.c
    screens/ui_StartWardriving.c
    screens/ui_SateliteInfo.c
    screens/ui_SyncRTCTime.c
    screens/ui_NmeaConsole.c
    screens/ui_PcapManager.c
    screens/ui_StorageInfo.c
    screens/ui_FormatSD.c
    screens/ui_UniversalRemote.c
    screens/ui_LearnSignal.c
    screens/ui_SavedRemotes.c
    screens/ui_RunPayload.c
    screens/ui_SavedScripts.c
    screens/ui_BLESpam.c
    screens/ui_BLESniffer.c
    screens/ui_SourApple.c
    screens/ui_DeauthAttack.c
    screens/ui_BeaconSpam.c
    screens/ui_EvilTwin.c
    screens/ui_ProbeSniffing.c
    screens/ui_SniffMenu.c
    screens/ui_BeaconModes.c
    screens/ui_SDRemoteAction.c
    screens/ui_UniversalIRAttack.c
    screens/ui_PcapAction.c
    screens/ui_BLESpamAction.c
    screens/ui_SavedTagsRemote.c
    screens/ui_NrfAction.c
    screens/ui_CCSendSavedAction.c
    screens/ui_SDCardBeacon.c
    screens/ui_SelectTargetBeacon.c
    screens/ui_PortalSelectScreen.c
    screens/ui_PCAPScreen.c
    screens/ui_SavedHandshakes.c
    screens/ui_BeaconSniffing.c
    screens/ui_SavedHandshakesAction.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c)

add_library(ui ${SOURCES})
